; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CiLoadConfigFilePathFromIni.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CiLoadConfigFilePathFromIni.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"ConfigPath\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CiLoadConfigFilePathFromIni(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %8, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %36

12:                                               ; preds = %2
  %13 = call i32* (...) @CiLoadIni()
  store i32* %13, i32** %7, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %36

17:                                               ; preds = %12
  %18 = load i8*, i8** %4, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @StrCpy(i8* %18, i32 %19, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %21 = load i32*, i32** %7, align 8
  %22 = call i8* @IniStrValue(i32* %21, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  store i8* %22, i8** %6, align 8
  %23 = load i8*, i8** %4, align 8
  %24 = load i32, i32* %5, align 4
  %25 = load i8*, i8** %6, align 8
  %26 = call i32 @NormalizePath(i8* %23, i32 %24, i8* %25)
  %27 = load i8*, i8** %4, align 8
  %28 = call i32 @IsEmptyStr(i8* %27)
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %17
  store i32 1, i32* %8, align 4
  br label %32

31:                                               ; preds = %17
  store i32 0, i32* %8, align 4
  br label %32

32:                                               ; preds = %31, %30
  %33 = load i32*, i32** %7, align 8
  %34 = call i32 @CiFreeIni(i32* %33)
  %35 = load i32, i32* %8, align 4
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %32, %16, %11
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32* @CiLoadIni(...) #1

declare dso_local i32 @StrCpy(i8*, i32, i8*) #1

declare dso_local i8* @IniStrValue(i32*, i8*) #1

declare dso_local i32 @NormalizePath(i8*, i32, i8*) #1

declare dso_local i32 @IsEmptyStr(i8*) #1

declare dso_local i32 @CiFreeIni(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
